<resources>
    <string name="app_name">The Cloudcart</string>

    <string name="sign_in_id" translatable="false">339385394250-0cg2n1igfgcoh0ubvlvoh1gu1r35lqp6.apps.googleusercontent.com</string>
    >

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <string name="title_activity_main" translatable="false">MainActivity</string>
    <string name="quantity_duepunti">Quantity :</string>
    <string name="whats_your_name">What\'s your name</string>
    <string name="settings">Settings</string>
    <string name="new_user">New user</string>
    <string name="username">Username</string>
    <string name="usernameRequired">Username*</string>
    <string name="password" translatable="false">Password</string>
    <string name="passwordRequired">Password*</string>
    <string name="repeat_password">Ripeat password*</string>
    <string name="email">Email</string>
    <string name="register_yoruself">Register</string>
    <string name="price">Price</string>
    <string name="brand">Brand</string>
    <string name="dimension">Dimension</string>
    <string name="quantity">Quantity</string>
    <string name="description">Description</string>
    <string name="save_new_product">Save new product</string>
    <string name="save_product">Save product</string>
    <string name="category">Category</string>
    <string name="product">Product</string>
    <string name="add">Add</string>
    <string name="already_saved_product">Product already saved</string>
    <string name="login">Sign in</string>
    <string name="login_with_google">Sign in with google</string>
    <string name="no_account_register">Don\'t own an account? Register</string>
    <string name="save">Save</string>
    <string name="name">Name</string>
    <string name="dimension_es_1kg">Dimension (ex. 1kg/1lt)</string>
    <string name="list_name">List name</string>
    <string name="create_list">Create list</string>
    <string name="delete">Delete</string>
    <string name="bought">Bought</string>
    <string name="icon">Icon</string>
    <string name="add_to_list_duepunti">Add to a list :</string>
    <string name="Crea_nuovo_prodotto">Create new product</string>
    <string name="Crea_prodotto">Create product</string>
    <string name="salva_e_aggiungi_alla_lista">Save and add to the list</string>
    <string name="title_login_activity" translatable="false">LoginActivity</string>
    <string name="fragment_list_banner" translatable="false">ca-app-pub-3337410811427983/5930335959</string>
    <string name="Logging_in">Logging in...</string>
    <string name="Error">Error</string>
    <string name="Mine">Mine</string>
    <string name="Shared_with_me">Shared with me</string>
    <string name="New_product">New product</string>
    <string name="My_lists">My lists</string>
    <string name="Logout">Logout</string>
    <string name="About_the_cloudcart">About The Cloudcart</string>
    <string name="Add_product">Add product</string>
    <string name="Recommended">Recommended</string>
    <string name="Add_to_list">Add to list</string>
    <string name="Category_1">Fruit &amp; vegetables</string>
    <string name="Category_2">Bakery</string>
    <string name="Category_3">Dairy</string>
    <string name="Category_4">Meat &amp; fish</string>
    <string name="Category_5">Ingredients &amp; spieces</string>
    <string name="Category_6">Pasta, rice &amp; cereals</string>
    <string name="Category_7">Snack &amp; desserts</string>
    <string name="Category_8">Beverages</string>
    <string name="Category_9">Tobacco</string>
    <string name="Category_10">House</string>
    <string name="Category_11">Hygene</string>
    <string name="Category_12">Animals</string>
    <string name="Category_13">Other</string>
    <string name="Products">Products</string>
    <string name="Information_about_the_cloudcart">Information about The Cloudcart</string>
    <string name="An_idea_of">An idea of</string>
    <string name="produced_by">Produced by</string>
    <string name="Version_code">Version code</string>
</resources>
