<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="org.cramest.thecloudcart.fragments.AggiungiProdottoFragment">

    <TextView
        android:id="@+id/title_aggiungi_prodotto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_to_list_duepunti"
        android:textAppearance="@android:style/TextAppearance.Material.Title"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/textViewAggiungiProdotto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_new_product"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        android:textStyle="bold"
        android:layout_below="@+id/title_aggiungi_prodotto"
        android:layout_alignParentStart="true"
        android:layout_marginTop="13dp" />

    <Button
        android:id="@+id/button_crea_prodotto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_product"
        style="@style/styledButton"
        android:layout_below="@+id/textViewAggiungiProdotto"
        android:layout_alignParentStart="true"
        android:layout_marginTop="13dp"
        android:layout_alignParentEnd="true" />

    <Spinner
        android:id="@+id/prodotto_spinner"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView5"
        android:layout_marginTop="13dp" />

    <Spinner
        android:id="@+id/categoria_spinner"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginTop="13dp"
        android:layout_below="@+id/text_categoria"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/text_categoria"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/category"
        android:layout_below="@+id/textView3"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:text="@string/product"
        android:layout_below="@+id/categoria_spinner"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:id="@+id/aggiungi_prodotto_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/add"
        style="@style/styledButton"/>


    <EditText
        android:id="@+id/quantita"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/text_quantita"
        android:ems="10"
        android:inputType="number"
        android:maxLines="1"
        android:text="1"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/text_quantita"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quantity"
        android:layout_below="@+id/prodotto_spinner"
        android:layout_alignParentStart="true"
        android:layout_marginTop="13dp" />

    <EditText
        android:id="@+id/descrizione"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/quantita"
        android:layout_marginTop="13dp"
        android:ems="10"
        android:hint="@string/description"
        android:inputType="textMultiLine"
        android:maxLines="10"
        android:selectAllOnFocus="false"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:text="@string/already_saved_product"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        android:textStyle="bold"
        android:layout_below="@+id/button_crea_prodotto"
        android:layout_alignParentStart="true" />

</RelativeLayout>